--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,24 +2,29 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     font-size: 15px;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.ftrDay {
+.ftrDay{
     font-size: 15px;
 }
 
-h3 {
+h3{
     font-weight: bold;
 }
 
-span {
+.forecast{
+    
+    font-size: 0.9em;
+}
+
+span{
     font-size: medium;
 }
 
-li:hover {
+li:hover{
     background-color: white;
     text-emphasis-color: black;
     text-decoration: transparent;
